--- a/eElectronics/Views/Home/Index.cshtml
+++ b/eElectronics/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "";
+    ViewBag.Active1 = "active";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
